# Secunda

./: README.md  docker-compose.yaml
db/: dump.sql
src/: .env.example  Dockerfile  main.py  pyproject.toml
src/api/: router.py
src/api/v1/: activity.py  building.py  organization.py
src/core/: config.py  exceptions.py  middlewares.py
src/db/: session.py
src/db/migrations/versions/: 3acb81d82275_init.py  ee5e24475288_init.py  ef5cde18114f_init.py
src/db/models/: __init__.py  activity.py  building.py  mixins.py  organization.py  organization_to_activity_relationship.py
src/db/repository/: activity.py  building.py  organization.py  organization_to_activity_relationship.py
src/schemas/: activity.py  base.py  building.py  filter.py  mixins.py  organization.py  organization_to_activity_relationship.py
src/service/: activity.py  building.py  organization.py
