[project]
name = "secunda"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruzek",email = "reek867@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.13"
package-mode = false

dependencies = [
    "fastapi[all] (>=0.119.1,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
mypy = "^1.18.2"

