[project]
name = "secunda"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruzek",email = "reek867@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.13"
package-mode = false

dependencies = [
    "fastapi[all] (>=0.119.1,<0.120.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
mypy = "^1.18.2"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
allow_redefinition = "False"
check_untyped_defs = "True"
disallow_untyped_decorators = "True"
disallow_any_explicit = "False"
disallow_any_generics = "True"
disallow_untyped_calls = "True"
ignore_errors = "False"
ignore_missing_imports = "True"
implicit_reexport = "False"
local_partial_types = "True"
strict_optional = "True"
strict_equality = "True"
no_implicit_optional = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unreachable = "True"
warn_no_return = "True"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




